refactor: rename `/service-category` -> `/service-categories`
