# docs/openapi.yml
@@ -24,8 +24,8 @@ tags:
     description: Authentication & Authorization
   - name: users
     description: User management
-  - name: service-category
-    description: Service category management
+  - name: service-categories
+    description: Service categories management
   - name: services
     description: Services management
 paths:
@@ -303,11 +303,11 @@ paths:
         '404':
           description: User not found
 
-  /api/v1/service-category:
+  /api/v1/service-categories:
     get:
       summary: Get all service categories
       tags:
-        - service-category
+        - service-categories
       responses:
         '200':
           description: Get all service categories successfully
@@ -325,7 +325,7 @@ paths:
     post:
       summary: Create a new servicess
       tags:
-        - service-category
+        - service-categories
       requestBody:
         required: true
         content:
@@ -346,11 +346,11 @@ paths:
           description: Bad request
       security:
         - JWT: []
-  /api/v1/service-category/{id}:
+  /api/v1/service-categories/{id}:
     get:
       summary: Get a service category by ID
       tags:
-        - service-category
+        - service-categories
       parameters:
         - name: id
           in: path
@@ -376,7 +376,7 @@ paths:
     patch:
       summary: Update a service category by ID
       tags:
-        - service-category
+        - service-categories
       parameters:
         - name: id
           in: path
@@ -410,7 +410,7 @@ paths:
     delete:
       summary: Soft delete a service category by ID
       tags:
-        - service-category
+        - service-categories
       parameters:
         - name: id
           in: path
@@ -426,11 +426,11 @@ paths:
           description: Service category not found
       security:
         - JWT: []
-  /api/v1/service-category/deleted:
+  /api/v1/service-categories/deleted:
     get:
       summary: Get all deleted service categories
       tags:
-        - service-category
+        - service-categories
       responses:
         '200':
           description: Get all deleted service categories successfully
@@ -445,11 +445,11 @@ paths:
                       $ref: '#/components/schemas/ServiceCategoryDto'
       security:
         - JWT: []
-  /api/v1/service-category/restore/{id}:
+  /api/v1/service-categories/restore/{id}:
     patch:
       summary: Restore a deleted service category by ID
       tags:
-        - service-category
+        - service-categories
       parameters:
         - name: id
           in: path
